--- a/translation/ru/rescue_willard.po
+++ b/translation/ru/rescue_willard.po
@@ -1,4 +1,4 @@
-# SOME DESCRIPTIVE TITLE.
+# Russian translations for sumwars package
 # Copyright (C) 2010 THE sumwars'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: sumwars 0.5\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-03-09 15:15+0100\n"
-"PO-Revision-Date: 2011-06-28 20:09+0400\n"
+"PO-Revision-Date: 2011-10-01 00:51+0400\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -18,7 +18,7 @@ msgstr ""
 
 #: rescue_willard.xml
 msgid "A friend in need"
-msgstr ""
+msgstr "Друг в беде"
 
 #: rescue_willard.xml
 msgid ""
@@ -26,12 +26,17 @@ msgid ""
 "wouldn't pay to let people live? At least as long there are enough goblins "
 "around."
 msgstr ""
+"Виллард вернулся обратно в Медаир и даже дал мне немного денег. Кто сказал, "
+"люди не будут платить за то, чтобы остаться в живых? По крайней мере до тех "
+"пор, пока вокруг достаточно гоблинов."
 
 #: rescue_willard.xml
 msgid ""
 "Willard is in hiding somewhere around the Aisen Meadow. Due to his injury he "
 "will show himself only if there are no goblins around."
 msgstr ""
+"Виллард прячется где-то в Низинах Аизена. Так как он ранен, он выйдет из "
+"укрытия только если рядом не будет гоблинов."
 
 #: rescue_willard.xml
 msgid ""
@@ -43,15 +48,15 @@ msgstr ""
 
 #: rescue_willard.xml
 msgid "medMercCamp"
-msgstr ""
+msgstr "Лагерь наемников Медаир"
 
 #: rescue_willard.xml
 msgid "Hey there!"
-msgstr ""
+msgstr "Эй, там!"
 
 #: rescue_willard.xml
 msgid "Fenor Marken"
-msgstr ""
+msgstr "Фенор Маркен"
 
 #: rescue_willard.xml
 msgid "Willard"
@@ -59,11 +64,11 @@ msgstr "Виллард"
 
 #: rescue_willard.xml
 msgid "I hope you are making a good time searching for Willard. ##solo"
-msgstr ""
+msgstr "Надеюсь, ты хорошо проводишь время в поисках Вилларда."
 
 #: rescue_willard.xml
 msgid "I hope you are making a good time searching for Willard."
-msgstr ""
+msgstr "Надеюсь, вы хорошо проводите время в поисках Вилларда."
 
 #: rescue_willard.xml
 msgid "Have you changed your mind?"
@@ -83,11 +88,11 @@ msgstr "Нет"
 
 #: rescue_willard.xml
 msgid "If I'm not mistaken you are a Branded One."
-msgstr ""
+msgstr "Если я не ошибаюсь, то ты Избранный."
 
 #: rescue_willard.xml
 msgid "If I'm not mistaken you are Branded Ones."
-msgstr ""
+msgstr "Если я не ошибаюсь, то вы Избранные."
 
 #: rescue_willard.xml
 msgid "What the..."
@@ -95,100 +100,107 @@ msgstr "Что за..."
 
 #: rescue_willard.xml
 msgid "Do I have a sign somewere saying: Caution, dangerous monster??"
-msgstr ""
+msgstr "У меня что, на лбу написано: внимание, опасный монстр?"
 
 #: rescue_willard.xml
 msgid "That is the second time today!"
-msgstr ""
+msgstr "Это уже второй раз за сегодня!"
 
 #: rescue_willard.xml
 msgid "I could always feel if someone was a Branded One."
-msgstr ""
+msgstr "Я могу чувствовать, кто является Избранным."
 
 #: rescue_willard.xml
 msgid ""
 "But don't worry, I will give noone away, as long as they are behaving "
 "correctly."
 msgstr ""
+"Но не беспокойся, я никому ничего не скажу, пока все ведут себя хорошо."
 
 #: rescue_willard.xml
 msgid "There is something I'd like to ask of you. ##solo"
-msgstr ""
+msgstr "Есть кое-что, что я бы хотел у тебя спросить."
 
 #: rescue_willard.xml
 msgid "Only someone like you could do it reliably. ##solo"
-msgstr ""
+msgstr "Только кто-то вроде тебя может сделать это наверняка."
 
 #: rescue_willard.xml
 msgid "There is something I'd like to ask of you."
-msgstr ""
+msgstr "Есть кое-что, что я бы хотел у вас спросить."
 
 #: rescue_willard.xml
 msgid "Only someone like you could do it reliable."
-msgstr ""
+msgstr "Только кто-то вроде вас может сделать это наверняка."
 
 #: rescue_willard.xml
 msgid "Who would have thought that?"
-msgstr ""
+msgstr "С чего ты это взял?"
 
 #: rescue_willard.xml
 msgid "Does an honorable member of the city guard wants someone's throat cut?"
-msgstr ""
+msgstr "Почетный член городской стражи хочет перерезать кому-то горло?"
 
 #: rescue_willard.xml
 msgid "What? I could have hired a professional assassin for that."
-msgstr ""
+msgstr "Что? Для этого я мог бы нанять профессионального убийцу ."
 
 #: rescue_willard.xml
 msgid ""
 "I thought you were the kind of Branded Ones that doesn't kill every human "
 "crossing their way."
 msgstr ""
+"Я думал, ты такой Избранный, который не убивает всех людей, которые "
+"переходят ему дорогу."
 
 #: rescue_willard.xml
 msgid "I'm sorry. Maybe my mouth slipped."
-msgstr ""
+msgstr "Прощу прощения, вырвалось."
 
 #: rescue_willard.xml
 msgid "Whatever. What is it you really want?"
-msgstr ""
+msgstr "Неважно. Что ты действительно хочешь?"
 
 #: rescue_willard.xml
 msgid "Thanks. My name is Fenor Marken."
-msgstr ""
+msgstr "Спасибо. Меня зовут Фенор Маркен."
 
 #: rescue_willard.xml
 msgid "I have a friend with the gamekeepers."
-msgstr ""
+msgstr "У меня есть друг-лесник."
 
 #: rescue_willard.xml
 msgid ""
 "He was in the meadows with two collegues, when they were attacked by goblins."
 msgstr ""
+"Он был в низинах с двумя помощниками, как их внезапно атаковали гоблины."
 
 #: rescue_willard.xml
 msgid "And those cowards left him behind injured!"
-msgstr ""
+msgstr "И эти трусы бросили его раненым!"
 
 #: rescue_willard.xml
 msgid "Surely you don't want me to bring back his corpse, do you?"
-msgstr ""
+msgstr "Конечно же, ты не хочешь, чтобы я принес обратно его труп, не так ли?"
 
 #: rescue_willard.xml
 msgid "Surely you don't want us to bring back his corpse, do you?"
 msgstr ""
+"Конечно же, ты не хочешь, чтобы мы принесли обратно его труп, не так ли?"
 
 #: rescue_willard.xml
 msgid "No, Willard isn't someone who would be killed by some lousy goblins."
 msgstr ""
+"Нет, Виллард не такой человек, которого могут убить какие-то паршивые "
+"гоблины."
 
 #: rescue_willard.xml
 msgid "I'm sure he waits somewhere for help."
-msgstr ""
+msgstr "Я уверен, он где-то затаился и ожидает помощи."
 
 #: rescue_willard.xml
 msgid "I'm sure you are very busy."
-msgstr ""
+msgstr "Я уверен, вы очень заняты."
 
 #: rescue_willard.xml
 msgid "That is why I only ask you to bring him this phasestone. ##solo"
@@ -212,7 +224,7 @@ msgstr ""
 
 #: rescue_willard.xml
 msgid "But you Branded Ones have other ways and means to travel, haven't you."
-msgstr ""
+msgstr "Но у вас, Избранных, свои пути и способы путешествия."
 
 #: rescue_willard.xml
 msgid "And you cannot use a phasestone since it is dedicated to Avaera, right?"
@@ -220,11 +232,11 @@ msgstr ""
 
 #: rescue_willard.xml
 msgid "That is why I called you when you were passing."
-msgstr ""
+msgstr "Вот почему я окликнул тебя, когда ты проходил мимо."
 
 #: rescue_willard.xml
 msgid "You know quite a lot."
-msgstr ""
+msgstr "Ты знаешь довольно много."
 
 #: rescue_willard.xml
 msgid "Your friend is as good as safe."
@@ -236,76 +248,80 @@ msgstr ""
 
 #: rescue_willard.xml
 msgid "Thank you. ##solo"
-msgstr ""
+msgstr "Спасибо тебе."
 
 #: rescue_willard.xml
 msgid "Thank you."
-msgstr ""
+msgstr "Спасибо вам."
 
 #: rescue_willard.xml
 msgid ""
 "I'm sorry, but I don't want to waste my time searching for any gamekeepers."
 msgstr ""
+"Прошу прощения, но я не хочу тратить время попусту на поиски каких-то "
+"лесников."
 
 #: rescue_willard.xml
 msgid "You are as cold-hearted as they say. ##solo"
-msgstr ""
+msgstr "Ты такой бессердечный, прямо как и говорят."
 
 #: rescue_willard.xml
 msgid "I'm sorry, but we cannot waste our time searching for any gamekeepers."
 msgstr ""
+"Прошу прощения, но мы не можем тратить время попусту на поиски каких-то "
+"лесников."
 
 #: rescue_willard.xml
 msgid "You are as cold-hearted as they say."
-msgstr ""
+msgstr "Вы такие бессердечные, прямо как и говорят."
 
 #: rescue_willard.xml
 msgid "If only I could leave here."
-msgstr ""
+msgstr "Если бы только я мог отойти отсюда."
 
 #: rescue_willard.xml
 msgid "I would search for him myself."
-msgstr ""
+msgstr "Тогда я сам пошел бы на поиски."
 
 #: rescue_willard.xml
 msgid "Then what do you want of me? ##solo"
-msgstr ""
+msgstr "Тогда что тебе от меня надо?"
 
 #: rescue_willard.xml
 msgid "Leave, before I tell someone about you! ##solo"
-msgstr ""
+msgstr "Уходи, пока я никому не рассказал про тебя!"
 
 #: rescue_willard.xml
 msgid "Then what do you want from me?"
-msgstr ""
+msgstr "Тогда что тебе от меня надо?"
 
 #: rescue_willard.xml
 msgid "Leave, before I tell someone about you!"
-msgstr ""
+msgstr "Уходи, пока я никому не рассказал про тебя!"
 
 #: rescue_willard.xml
 msgid "Give Willard the stone (Reward)"
-msgstr ""
+msgstr "Отдать Вилларду камень (Награда)"
 
 #: rescue_willard.xml
 msgid "Thank's for your help."
-msgstr ""
+msgstr "Спасибо за помощь."
 
 #: rescue_willard.xml
 msgid "Can I ask you for another favor?"
-msgstr ""
+msgstr "Могу я попросить ещё об одной услуге?"
 
 #: rescue_willard.xml
 msgid "My leg is hurt and I won't make it to Medair alone."
-msgstr ""
+msgstr "Моя нога болит, и я не смогу дойти до Медаира в одиночку."
 
 #: rescue_willard.xml
 msgid "You are Willard, I suppose."
-msgstr ""
+msgstr "Вы, как я понимаю, Виллард."
 
 #: rescue_willard.xml
 msgid "That's me. Why do you know my name?"
-msgstr ""
+msgstr "Это я. Откуда вы знаете мое имя?"
 
 #: rescue_willard.xml
 msgid "Your friend Fenor Marken sent us to give you this phasestone."
@@ -313,19 +329,19 @@ msgstr ""
 
 #: rescue_willard.xml
 msgid "Holy gods! He still has that thing?"
-msgstr ""
+msgstr "Святые небеса! У него все ещё есть эта штуковина?"
 
 #: rescue_willard.xml
 msgid "That was one of our youthful follys."
-msgstr ""
+msgstr "Это была одна из наших юношеских забав."
 
 #: rescue_willard.xml
 msgid "Mine is long used up."
-msgstr ""
+msgstr "Мой уже давным-давно израсходовался."
 
 #: rescue_willard.xml
 msgid "Good old Fenor. Here, a token of my appreciation."
-msgstr ""
+msgstr "Старый добрый Фенор. Вот, держите в знак моей благодарности."
 
 #: rescue_willard.xml
 msgid "Surely someone of your trade can always use a little money?"
@@ -333,12 +349,12 @@ msgstr ""
 
 #: rescue_willard.xml
 msgid "Thank you very much."
-msgstr ""
+msgstr "Большое спасибо тебе."
 
 #: rescue_willard.xml
 msgid "aisMeadow"
-msgstr ""
+msgstr "Низина Аизена"
 
 #: rescue_willard.xml
 msgid "So here is this Willard."
-msgstr ""
+msgstr "А вот и Виллард."
