--- a/translation/ru/goblin_raid.po
+++ b/translation/ru/goblin_raid.po
@@ -1,4 +1,4 @@
-# SOME DESCRIPTIVE TITLE.
+# Russian translations for sumwars package
 # Copyright (C) 2010 THE sumwars'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: sumwars 0.5\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-03-09 15:15+0100\n"
-"PO-Revision-Date: 2011-08-18 03:46+0400\n"
+"PO-Revision-Date: 2011-10-01 00:15+0400\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -50,7 +50,7 @@ msgstr ""
 
 #: goblin_raid.xml
 msgid "aisDarkClearing"
-msgstr ""
+msgstr "Темная Поляна"
 
 #: goblin_raid.xml
 msgid "Sergeant Lutterer"
@@ -73,14 +73,16 @@ msgstr ""
 #: goblin_raid.xml
 msgid "Some kind of head honcho shaman had them, so I figure they mean it."
 msgstr ""
+"Они были у какого-то главного шамана, так что мне кажется, их надо принимать "
+"всерьез."
 
 #: goblin_raid.xml
 msgid "Meant it. Whatever."
-msgstr ""
+msgstr "Надо было."
 
 #: goblin_raid.xml
 msgid "Hey, sergeant, ready to pay for the pre-emptive rescue of the village?"
-msgstr ""
+msgstr "Эй, сержант, вы готовы платить за преждевременное спасение деревни?"
 
 #: goblin_raid.xml
 msgid "I guess you can be trusted."
@@ -106,7 +108,7 @@ msgstr ""
 
 #: goblin_raid.xml
 msgid "As they say: One hand washes the other."
-msgstr ""
+msgstr "Как говорится, рука руку моет."
 
 #: goblin_raid.xml
 msgid "Do you want to help the peasant?"
@@ -134,7 +136,7 @@ msgstr "Ты понимаешь, что их гораздо больше там,
 
 #: goblin_raid.xml
 msgid "Just go already."
-msgstr ""
+msgstr "Короче, просто иди."
 
 #: goblin_raid.xml
 msgid "Whatever. It's not like I need the money or anything."
