--- a/translation/ru/rob_the_robber.po
+++ b/translation/ru/rob_the_robber.po
@@ -1,4 +1,4 @@
-# SOME DESCRIPTIVE TITLE.
+# Russian translations for sumwars package
 # Copyright (C) 2010 THE sumwars'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: sumwars 0.5\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-03-09 15:15+0100\n"
-"PO-Revision-Date: 2011-06-27 23:24+0400\n"
+"PO-Revision-Date: 2011-10-01 00:27+0400\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -18,7 +18,7 @@ msgstr ""
 
 #: rob_the_robber.xml
 msgid "Rob the robber"
-msgstr ""
+msgstr "Роб-разбойник"
 
 #: rob_the_robber.xml
 msgid ""
@@ -52,6 +52,8 @@ msgstr "Объявление о розыске"
 msgid ""
 "I really should pay this guy a visit. 10000 gold pieces are not chickenfeed."
 msgstr ""
+"Мне действительно стоит навестить этого парня. 10000 золотых - это вам не "
+"копейки."
 
 #: rob_the_robber.xml
 msgid "Watch your back."
