--- a/translation/ru/the_poolmonster.po
+++ b/translation/ru/the_poolmonster.po
@@ -1,4 +1,4 @@
-# SOME DESCRIPTIVE TITLE.
+# Russian translations for sumwars package
 # Copyright (C) 2010 THE sumwars'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: sumwars 0.5\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-03-09 15:15+0100\n"
-"PO-Revision-Date: 2011-06-26 18:00+0400\n"
+"PO-Revision-Date: 2011-10-01 00:46+0400\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -38,7 +38,7 @@ msgstr ""
 
 #: scene7.xml
 msgid "Are you getting sentimental now?"
-msgstr ""
+msgstr "Ты что, становишься сентиментальным?"
 
 #: scene7.xml
 msgid "... Der Anblick hat mich nur an mein Leben"
