Added new libs (physfs and Poco) to the requirement list in INSTALL

--- a/INSTALL
+++ b/INSTALL
@@ -8,6 +8,8 @@ CEGUI >= 0.7
 freealut, openal
 lua5.1
 ogg, vorbis, vorbisfile
+physfs
+POCO (for debug build only)
 
 If you are lucky, all libs may be installed via package manager (apt-get, yum, emerge, pacman, ...).
 Have a look at the "OS dependant install" section below.
